# Megano-django-app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
megano/api/: admin.py  models.py  serializers.py  urls.py  views.py
megano/api/management/commands/: create_products.py
megano/api/migrations/: 0001_initial.py  0002_alter_categoryimage_category.py  0003_alter_productimage_options_alter_category_parent_and_more.py  0004_alter_productimage_options.py  0005_product_limited_edition.py  0006_alter_categoryimage_options_and_more.py  0007_alter_sale_saleprice_basket.py  0008_remove_basket_count_remove_basket_product_and_more.py  0009_order_alter_basket_options_alter_basketitem_options_and_more.py  0010_remove_order_products.py  0011_order_products.py
megano/fixtures/: test_data.json
megano/megano/: settings.py  urls.py
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/shopapp/migrations/: 0001_initial.py  0002_rename_description_productimage_alt_and_more.py  0003_tag_product_freedelivery_product_fulldescription.py  0004_review.py  0005_alter_category_options.py  0006_alter_review_product.py  0007_alter_product_options_alter_review_options_and_more.py  0008_tag_product.py  0009_alter_tag_name.py  0010_alter_tag_product.py  0011_review_user.py
