[tool.poetry]
name = "python-django-diploma"
version = "0.1.0"
description = ""
authors = ["Alexander Chekalovets <alex4ekalovets@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
gunicorn = "^21.2.0"
django-debug-toolbar = "^4.1.0"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
pillow = "9.5.0"
django-cleanup = "^8.0.0"
django-imagekit = "^4.1.0"
django-mptt = "^0.14.0"
django-mptt-admin = "^2.5.1"
djangorestframework-recursive = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
